--- a/packages/marketing/public/index.html
+++ b/packages/marketing/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
 
-</head>
+    <title></title></head>
 <body>
+<div id="_marketing-dev-root">
 
+</div>
 </body>
 </html>
