--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-<div id="_marketing-dev-root">
-
-</div>
+<div id="root"></div>
 </body>
 </html>
